# darps

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  config.yaml  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt
.agents/rules/: engine-code.md  pack-content.md
.agents/skills/: ARCHITECTURE.md  DECISIONS.md  GUIDE.md
.agents/skills/engine-dev/: SKILL.md
.agents/skills/pack-authoring/: SKILL.md
.agents/skills/playtest-debug/: SKILL.md
.github/workflows/: docs.yml
clients/: DarpsClient.cs
darps/: __init__.py  cli.py  conditions.py  content.py  env.py  lint.py  llm.py  orchestrator.py  scaffold.py  server.py  state.py  validate.py
darps/prompts/: classifier.txt  knowledge.txt  narrator.txt  persona.txt
docs/: GUIDE.md  index.md
docs/api/: clients.md  http-reference.md  index.md
docs/authoring/: best-practices.md  characters.md  conditions.md  facts-knowledge.md  index.md  items.md  locations.md  manifest.md
docs/concepts/: glossary.md  index.md  knowledge.md  state-saves.md
docs/examples/minimal-pack/: facts.yaml  pack.yaml  player.yaml  vars.yaml  world.md
docs/getting-started/: connect-host.md  first-pack.md
docs/integration/: index.md  providers.md  streaming-errors.md
docs/internals/: architecture.md  data-flow.md  engine-development.md
docs/recipes/: index.md
docs/reference/: configuration.md  state-events.md
docs/setup/: configuration.md  connect-host.md  first-pack.md  index.md
packs/ashworth-manor/: facts.yaml  pack.yaml  player.yaml  vars.yaml  world.md
tests/: smoke.py
(+16 files in other folders)
